Update index: add main structure tags

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!-- HTML standard -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <title>University acceptance letter</title>
+</head>
 <!--
 	Name: Francisco Reina
 	File: index.html
@@ -7,6 +14,7 @@
     It contains addresses, the main content of the letter, and a conclusion.
     This exercise is ment to evaluate text formatting skills in HTML.
 -->
+<body>
     <!-- Sender's address -->
     <!-- Date -->
     <!-- Receiver's address -->
@@ -17,4 +25,6 @@
     <!-- Subjects of study -->
     <!-- Exotic dance moves -->
     <!-- Conclusion -->
-    <!-- University motto -->
+    <!-- University motto -->    
+</body>
+</html>
