Update index: add hyperlink to access second web page

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     
     <!-- University motto -->
     <p>University of Awesome motto: "Be awesome to each other." - <cite>The memoirs of Bill S Preston, <abbr title="Esquire">Esq.</abbr></cite></p>
-    
+    <p><a href="index2.html">part two web page</a></p>
 </body>
 </html>
 
