--- a/Assignment 2 - HTML Multimedia and Tables/index.html
+++ b/Assignment 2 - HTML Multimedia and Tables/index.html
@@ -109,12 +109,20 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
+      <img class="" src="FirefoxLogo120.png" alt="" />
 
     </header>
 
     <main>
       <article>
         <!-- insert iframe from youtube -->
+        <iframe 
+        width="560" 
+        height="315" 
+        src="https://www.youtube.com/embed/ojcNcvb1olg?si=FKiMAX9uCGq9suay" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
 
         <h2>Rocking the free web</h2>
 
@@ -126,22 +134,37 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+          <img src="FirefoxLogo400.png" 
+               alt="Firefox Browser" 
+               srcset="FirefoxLogo120.png 120w, FirefoxLogo400.png 400w" 
+               sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://www.mozilla.org/">
-          <img>
+          <img src="DinosaurHead400.png" 
+               alt="DinoHead" 
+               srcset="DinosaurHead120.png 120w, DinosaurHead400.png 400w" 
+               sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img src="FirefoxAddons400.jpg" 
+               alt="Firefox Add-ons" 
+               srcset="FirefoxAddons120.jpg 120w, FirefoxAddons400.jpg 400w" 
+               sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src="DinoDev400fix2.png" 
+               alt="MDN Web Docs" 
+               srcset="DinoDev120fix.png 120w, DinoDev400fix2.png 400w">
         </a>
         <div class="clearfix"></div>
       </div>
 
       <div class="red-panda">
         <!-- insert picture element -->
+        <picture>
+          <source srcset="RedPanda1200.jpg" media="(min-width: 601px)">
+          <img src="RedPanda600.jpg" alt="Red Panda">
+        </picture>
       </div>
 
     </main>
