--- a/Assignment 2 - HTML Multimedia and Tables/index.html
+++ b/Assignment 2 - HTML Multimedia and Tables/index.html
@@ -152,9 +152,9 @@
                sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img src="DinoDev400fix2.png" 
+          <img src="DinoDev400fix.png" 
                alt="MDN Web Docs" 
-               srcset="DinoDev120fix.png 120w, DinoDev400fix2.png 400w">
+               srcset="DinoDev120fix.png 120w, DinoDev400fix.png 400w">
         </a>
         <div class="clearfix"></div>
       </div>
