--- a/Assignment 2 - HTML Multimedia and Tables/index.html
+++ b/Assignment 2 - HTML Multimedia and Tables/index.html
@@ -152,10 +152,7 @@ linking to Mozilla-related pages, apart from a Panda image at the bottom.
                sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img src="DinoDev400.png" 
-               alt="MDN Web Docs" 
-               srcset="DinoDev120.png 120w, DinoDev400.png 400w"
-               sizes="(max-width: 500px) 120px, 400px">
+          <img src="mdn.svg" alt="Mozilla Developer">
         </a>
         <div class="clearfix"></div>
       </div>
