--- a/Assignment 2 - HTML Multimedia and Tables/index.html
+++ b/Assignment 2 - HTML Multimedia and Tables/index.html
@@ -109,7 +109,7 @@ linking to Mozilla-related pages, apart from a Panda image at the bottom.
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
-      <img src="FirefoxLogo120.png" alt="Fire Fox Icon" />
+      <img src="FirefoxLogo120.png" alt="Fire Fox Icon">
 
     </header>
 
