move inline css to infile css for iframe tag

--- a/Assignment 2 - HTML Multimedia and Tables/index.html
+++ b/Assignment 2 - HTML Multimedia and Tables/index.html
@@ -67,6 +67,8 @@ linking to Mozilla-related pages, apart from a Panda image at the bottom.
       }
 
       iframe {
+        width: 560px; 
+        height: 315px;
         float: left;
         margin: 0 20px 20px 0;
         max-width: 100%;
@@ -117,8 +119,6 @@ linking to Mozilla-related pages, apart from a Panda image at the bottom.
       <article>
         <!-- insert iframe from youtube -->
         <iframe 
-        width="560" 
-        height="315" 
         src="https://www.youtube.com/embed/ojcNcvb1olg?si=FKiMAX9uCGq9suay" 
         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
