--- a/Assignment 2 - HTML Multimedia and Tables/index.html
+++ b/Assignment 2 - HTML Multimedia and Tables/index.html
@@ -69,6 +69,7 @@ linking to Mozilla-related pages, apart from a Panda image at the bottom.
       iframe {
         width: 560px; 
         height: 315px;
+        border: none;
         float: left;
         margin: 0 20px 20px 0;
         max-width: 100%;
@@ -120,7 +121,7 @@ linking to Mozilla-related pages, apart from a Panda image at the bottom.
         <!-- insert iframe from youtube -->
         <iframe 
         src="https://www.youtube.com/embed/ojcNcvb1olg?si=FKiMAX9uCGq9suay" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
         </iframe>
 
