add formatting comments

--- a/assignment3/part1/index.html
+++ b/assignment3/part1/index.html
@@ -50,7 +50,13 @@
   }
     </style>
   </head>
-
+<!--
+	Name: Francisco Reina
+	File: index.html
+	Date: 21 JUN 2024
+	Description: basic page to demonstrate CSS knowledge
+  Edit existing properti3s and add new selector.
+-->
   <body>
     <h1>Jane Doe</h1>
     <div class="job-title">Web Developer</div>
