add my name to h1

--- a/assignment3/part1/index.html
+++ b/assignment3/part1/index.html
@@ -58,7 +58,7 @@
   Edit existing properti3s and add new selector.
 -->
   <body>
-    <h1>Jane Doe</h1>
+    <h1>Francisco Reina</h1>
     <div class="job-title">Web Developer</div>
     <p>
       Far far away, behind the word mountains, far from the countries Vokalia
