--- a/assignment3/part2/index.html
+++ b/assignment3/part2/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="style.css">
     <title>Cool box</title>
     
   </head>
+<!--
+	Name: Francisco Reina
+	File: index.html
+	Date: 21 JUN 2024
+	Description: adding css to display an atractive look box
+-->
   <body>
       <div>This is a cool box</div>
   </body>
